--- a/Ruminoid.Trimmer.Shell/Windows/MainWindow.xaml
+++ b/Ruminoid.Trimmer.Shell/Windows/MainWindow.xaml
@@ -24,7 +24,8 @@
         MinHeight="720" MinWidth="1280" WindowStartupLocation="CenterScreen" 
         Icon="/Ruminoid.Trimmer.Shell;component/Assets/logo_v1.ico"
         Name="RootElement"
-        PreviewKeyDown="MainWindow_OnPreviewKeyDown">
+        PreviewKeyDown="MainWindow_OnPreviewKeyDown"
+        PreviewKeyUp="MainWindow_OnPreviewKeyUp">
 
     <chrome:WindowChrome.Instance>
         <chrome:WindowChrome>
@@ -167,6 +168,16 @@
                         ToolTip="撤销 (上箭头)"
                         Tag="Up"
                         Click="WwControl_OnClick">
+                        <Button.Style>
+                            <Style TargetType="Button">
+                                <Setter Property="Background" Value="{DynamicResource BackgroundBrushKey}"/>
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding ElementName=RootElement, Path=IsUpPressed}" Value="True">
+                                        <Setter Property="Background" Value="{DynamicResource AccentBrushKey}"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Style>
                         <visualIcon:Icon Type="Undo"/>
                     </Button>
                     <Button
@@ -174,6 +185,16 @@
                         Padding="0"
                         ToolTip="快退 (左箭头)"
                         Tag="Left">
+                        <Button.Style>
+                            <Style TargetType="Button">
+                                <Setter Property="Background" Value="{DynamicResource BackgroundBrushKey}"/>
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding ElementName=RootElement, Path=IsLeftPressed}" Value="True">
+                                        <Setter Property="Background" Value="{DynamicResource AccentBrushKey}"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Style>
                         <visualIcon:Icon Type="Previous"/>
                     </Button>
                     <ToggleButton
@@ -189,6 +210,16 @@
                         Padding="0"
                         ToolTip="快进 (右箭头)"
                         Tag="Right">
+                        <Button.Style>
+                            <Style TargetType="Button">
+                                <Setter Property="Background" Value="{DynamicResource BackgroundBrushKey}"/>
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding ElementName=RootElement, Path=IsRightPressed}" Value="True">
+                                        <Setter Property="Background" Value="{DynamicResource AccentBrushKey}"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Style>
                         <visualIcon:Icon Type="Next"/>
                     </Button>
                     <Button
@@ -196,6 +227,16 @@
                         Padding="0"
                         ToolTip="应用时间 (下箭头)"
                         Tag="Down">
+                        <Button.Style>
+                            <Style TargetType="Button">
+                                <Setter Property="Background" Value="{DynamicResource BackgroundBrushKey}"/>
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding ElementName=RootElement, Path=IsDownPressed}" Value="True">
+                                        <Setter Property="Background" Value="{DynamicResource AccentBrushKey}"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Style>
                         <visualIcon:Icon Type="ApplyCodeChanges"/>
                     </Button>
                 </Grid>
