feat: LrcModel Binding Update

--- a/Ruminoid.Trimmer.Shell/Views/LyricEditorView.xaml
+++ b/Ruminoid.Trimmer.Shell/Views/LyricEditorView.xaml
@@ -54,6 +54,7 @@
         <ListView  Background="{x:Null}" Foreground="White" Name="RootView"
                   DataContext="{x:Static models:LrcModel.Current}"
                   ItemsSource="{Binding Items}"
+                  SelectedItem="{Binding SelectedItem}"
                   SelectionMode="Single"
                   HorizontalContentAlignment="Stretch"
                   ScrollViewer.HorizontalScrollBarVisibility="Disabled">
@@ -73,6 +74,7 @@
                             <Grid>
                                 <ListView Background="#55000000"
                                        ItemsSource="{Binding Items}"
+                                       SelectedItem="{Binding SelectedItem}"
                                        SelectionMode="Single"
                                        BorderBrush="{x:Null}"
                                        ScrollViewer.HorizontalScrollBarVisibility="Auto"
