--- a/Ruminoid.Trimmer.Shell/Dialogs/EditLineDialog.xaml
+++ b/Ruminoid.Trimmer.Shell/Dialogs/EditLineDialog.xaml
@@ -60,7 +60,7 @@
                 <RowDefinition/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <TextBlock Margin="0,0,0,12">
+            <TextBlock Margin="0,0,0,12" Opacity="0.5">
                 <TextBlock.Style>
                     <Style TargetType="TextBlock">
                         <Setter Property="Text" Value="该行的时间戳将会被清空。"/>
