feat: EditLineDialog Update

--- a/Ruminoid.Trimmer.Shell/Dialogs/EditLineDialog.xaml
+++ b/Ruminoid.Trimmer.Shell/Dialogs/EditLineDialog.xaml
@@ -19,7 +19,8 @@
         Title="编辑" WindowStartupLocation="CenterScreen"
         ShowInTaskbar="False"
         Topmost="True"
-        Name="RootElement">
+        Name="RootElement"
+        PreviewKeyDown="EditLineDialog_OnPreviewKeyDown">
 
     <controls:MetroWindow.Resources>
         <ResourceDictionary>
