--- a/Ruminoid.Trimmer.Shell/Controls/ModeTypeControl.xaml
+++ b/Ruminoid.Trimmer.Shell/Controls/ModeTypeControl.xaml
@@ -26,6 +26,6 @@
                   IsEnabled="{Binding ElementName=RootElement, Path=IsEnabled}"/>
         <TextBlock Grid.Row="1" Margin="0,12,0,0" Opacity="0.5"
                    Text="{Binding ElementName=RootElement, Path=SelectedType.Description}"
-                   MinHeight="50"/>
+                   MinHeight="50" TextWrapping="Wrap"/>
     </Grid>
 </UserControl>
