--- a/Ruminoid.Trimmer.Shell/Dialogs/SaveFileDialog.xaml
+++ b/Ruminoid.Trimmer.Shell/Dialogs/SaveFileDialog.xaml
@@ -1,12 +1,108 @@
-﻿<Window x:Class="Ruminoid.Trimmer.Shell.Dialogs.SaveFileDialog"
+﻿<controls:MetroWindow x:Class="Ruminoid.Trimmer.Shell.Dialogs.SaveFileDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Ruminoid.Trimmer.Shell.Dialogs"
+        xmlns:chrome="http://schemes.grabacr.net/winfx/2014/chrome"
+        xmlns:controls="http://schemes.grabacr.net/winfx/2014/controls"
+        xmlns:ctrl="clr-namespace:Ruminoid.Trimmer.Shell.Controls"
+        xmlns:models="clr-namespace:Ruminoid.Trimmer.Shell.Models"
         mc:Ignorable="d"
-        Title="SaveFileDialog" Height="450" Width="800">
+        FontFamily="Segoe UI"
+        Background="{DynamicResource ThemeBrushKey}"
+        Foreground="White"
+        UseLayoutRounding="True"
+        IsRestoringWindowPlacement="True"
+        TextOptions.TextFormattingMode="Display"
+        SnapsToDevicePixels="True"
+        MinHeight="200" MinWidth="600"
+        Width="600"
+        Title="保存" WindowStartupLocation="CenterScreen"
+        ShowInTaskbar="False"
+        Name="RootElement">
+
+    <controls:MetroWindow.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/MetroRadiance;component/Styles/Icons.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </controls:MetroWindow.Resources>
+
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Border Grid.Row="0"
+				controls:MetroWindow.IsCaptionBar="True">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0"
+						   Text="{Binding ElementName=RootElement, Path=Title}"
+						   TextTrimming="CharacterEllipsis"
+						   Foreground="{DynamicResource ForegroundBrushKey}"
+						   FontFamily="Segoe UI Light"
+						   FontSize="18"
+						   Margin="12,2"
+						   VerticalAlignment="Center" />
+                <controls:SystemButtons Grid.Column="1"
+                                        VerticalAlignment="Top" />
+            </Grid>
+        </Border>
+
+        <Grid Grid.Row="1" Margin="12">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <StackPanel>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Grid Width="80">
+                        <TextBlock Text="文件：" Margin="0,1,6,0" HorizontalAlignment="Right"/>
+                    </Grid>
+                    <Grid Grid.Column="1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="{Binding ElementName=RootElement, Path=FilePath}"
+                                   Margin="0,0,6,0"/>
+                        <Button Grid.Column="1" Content="..."
+                                Tag="Save" Click="ButtonBase_OnClick"/>
+                    </Grid>
+                </Grid>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Grid Width="80">
+                        <TextBlock Text="预处理器：" Margin="0,15,6,0" HorizontalAlignment="Right"/>
+                    </Grid>
+                    <ctrl:ModeTypeControl
+                        Grid.Column="1"
+                        TypeList="{x:Static models:ModeType.KType}"
+                        SelectedType="{Binding ElementName=RootElement, Path=Mode}"/>
+                </Grid>
+            </StackPanel>
+            <StackPanel Grid.Row="1" Orientation="Horizontal"
+                        HorizontalAlignment="Right"
+                        Margin="0,12,0,0">
+                <Button Margin="12,0" Content="确定" MinWidth="80"
+                        Tag="Apply" Click="ButtonBase_OnClick"/>
+                <Button Content="取消" MinWidth="80"
+                        Click="ButtonBase_OnClick"/>
+            </StackPanel>
+        </Grid>
+
     </Grid>
-</Window>
+</controls:MetroWindow>
