feat: Add VersionHeader

--- a/Ruminoid.Trimmer.Shell/Windows/MainWindow.xaml
+++ b/Ruminoid.Trimmer.Shell/Windows/MainWindow.xaml
@@ -86,7 +86,8 @@
                         <MenuItem Command="Help" Foreground="#FF212121"/>
                         <MenuItem Command="{x:Static commands:UICommands.DoAppUpdate}" Foreground="#FF212121"/>
                         <Separator/>
-                        <MenuItem Header="关于(_A)" Foreground="#FF212121"/>
+                        <MenuItem Header="关于(_A)" IsEnabled="False" Foreground="#FF212121"/>
+                        <MenuItem Name="VersionHeader" IsEnabled="False" Foreground="#FF212121"/>
                     </MenuItem>
                 </Menu>
                 <!--<Grid Grid.Column="2" HorizontalAlignment="Left" Margin="12,2"
