--- a/Ruminoid.Trimmer.Shell/Dialogs/EditLineDialog.xaml
+++ b/Ruminoid.Trimmer.Shell/Dialogs/EditLineDialog.xaml
@@ -16,8 +16,8 @@
         IsRestoringWindowPlacement="True"
         TextOptions.TextFormattingMode="Display"
         SnapsToDevicePixels="True"
-        MinHeight="200" MinWidth="500"
-        Height="200" Width="500"
+        MinHeight="400" MinWidth="500"
+        Height="400" Width="500"
         Title="编辑" WindowStartupLocation="CenterScreen"
         ShowInTaskbar="False"
         Name="RootElement"
@@ -76,7 +76,8 @@
                 </TextBlock.Style>
             </TextBlock>
             <TextBox Grid.Row="1" Background="{DynamicResource BackgroundBrushKey}" Foreground="White"
-                     AcceptsReturn="{Binding ElementName=RootElement, Path=IsAddMode}" Name="InputBox"/>
+                     AcceptsReturn="{Binding ElementName=RootElement, Path=IsAddMode}" Name="InputBox"
+                     VerticalScrollBarVisibility="Auto"/>
             <Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
