--- a/Ruminoid.Trimmer.Shell/Views/PlaybackView.xaml
+++ b/Ruminoid.Trimmer.Shell/Views/PlaybackView.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="Ruminoid.Trimmer.Shell.Views.PlaybackView"
+<UserControl x:Class="Ruminoid.Trimmer.Shell.Views.PlaybackView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:Ruminoid.Trimmer.Shell.Views"
-             xmlns:wpf="clr-namespace:LibVLCSharp.WPF;assembly=LibVLCSharp.WPF"
-             mc:Ignorable="d" 
+             xmlns:ffme="clr-namespace:Unosquare.FFME;assembly=ffme.win"
+             mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800"
              FontFamily="Segoe UI"
              Background="{DynamicResource ThemeBrushKey}"
@@ -15,6 +15,6 @@
              SnapsToDevicePixels="True"
              Name="RootElement">
     <Grid>
-        <wpf:VideoView x:Name="VideoView"/>
+        <ffme:MediaElement x:Name="VideoElement" Background="Gray" LoadedBehavior="Play" UnloadedBehavior="Manual" />
     </Grid>
 </UserControl>
