--- a/Ruminoid.Trimmer.Shell/Windows/MainWindow.xaml
+++ b/Ruminoid.Trimmer.Shell/Windows/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<controls:MetroWindow x:Class="Ruminoid.Trimmer.Shell.Windows.MainWindow"
+<controls:MetroWindow x:Class="Ruminoid.Trimmer.Shell.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -21,7 +21,7 @@
         TextOptions.TextFormattingMode="Display"
         SnapsToDevicePixels="True" Height="720" Width="1280"
         Title="Trimmer"
-        MinHeight="720" MinWidth="1280" WindowStartupLocation="CenterScreen" 
+        MinHeight="720" MinWidth="1280" WindowStartupLocation="CenterScreen"
         Icon="/Ruminoid.Trimmer.Shell;component/Assets/logo_v1.ico"
         Name="RootElement"
         PreviewKeyDown="MainWindow_OnPreviewKeyDown"
@@ -321,6 +321,7 @@
                         Minimum="0" Maximum="1"
                         IsEnabled="{Binding MediaLoaded}"
                         Value="{Binding Position.Percentage}"
+                        IsMoveToPointEnabled="True"
                         PreviewMouseDown="Slider_OnPreviewMouseDown"
                         PreviewMouseUp="Slider_OnPreviewMouseUp"/>
             </Grid>
